; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_hellotype.c_HelloTypeAofRewrite.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_hellotype.c_HelloTypeAofRewrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.HelloTypeObject = type { %struct.HelloTypeNode* }
%struct.HelloTypeNode = type { %struct.HelloTypeNode*, i32 }

@.str = private unnamed_addr constant [17 x i8] c"HELLOTYPE.INSERT\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"sl\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HelloTypeAofRewrite(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.HelloTypeObject*, align 8
  %8 = alloca %struct.HelloTypeNode*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.HelloTypeObject*
  store %struct.HelloTypeObject* %10, %struct.HelloTypeObject** %7, align 8
  %11 = load %struct.HelloTypeObject*, %struct.HelloTypeObject** %7, align 8
  %12 = getelementptr inbounds %struct.HelloTypeObject, %struct.HelloTypeObject* %11, i32 0, i32 0
  %13 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %12, align 8
  store %struct.HelloTypeNode* %13, %struct.HelloTypeNode** %8, align 8
  br label %14

14:                                               ; preds = %17, %3
  %15 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %8, align 8
  %16 = icmp ne %struct.HelloTypeNode* %15, null
  br i1 %16, label %17, label %27

17:                                               ; preds = %14
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %8, align 8
  %21 = getelementptr inbounds %struct.HelloTypeNode, %struct.HelloTypeNode* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @RedisModule_EmitAOF(i32* %18, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* %19, i32 %22)
  %24 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %8, align 8
  %25 = getelementptr inbounds %struct.HelloTypeNode, %struct.HelloTypeNode* %24, i32 0, i32 0
  %26 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %25, align 8
  store %struct.HelloTypeNode* %26, %struct.HelloTypeNode** %8, align 8
  br label %14

27:                                               ; preds = %14
  ret void
}

declare dso_local i32 @RedisModule_EmitAOF(i32*, i8*, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
